[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/app_state/endless_menu.gd" type="Script" id=1]
[ext_resource path="res://src/app_state/focus_keeper.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/theme/menu_theme.tres" type="Theme" id=3]

[node name="endless_menu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -29.0
margin_top = -20.0
margin_right = 29.0
margin_bottom = 20.0

[node name="circuit" type="Button" parent="Control/VBoxContainer"]
margin_right = 84.0
margin_bottom = 14.0
text = "circuit mode"

[node name="single_room" type="Button" parent="Control/VBoxContainer"]
margin_top = 18.0
margin_right = 84.0
margin_bottom = 32.0
text = "single room"

[node name="back_to_menu" type="Button" parent="Control/VBoxContainer"]
margin_top = 36.0
margin_right = 84.0
margin_bottom = 50.0
text = "back to menu"

[node name="focus_keeper" parent="." instance=ExtResource( 2 )]
first_focus = NodePath("../Control/VBoxContainer/circuit")

[connection signal="pressed" from="Control/VBoxContainer/circuit" to="." method="_on_circuit_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/single_room" to="." method="_on_single_room_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/back_to_menu" to="." method="_on_back_to_menu_pressed"]
